# lucent-launcher

./: .gitignore  AGENTS.md  Cargo.toml  README.md  WINDOWS.md  build.rs  profiles.json
.cargo/: config.toml
crates/mc-launcher-core/: Cargo.toml  README.md
crates/mc-launcher-core/src/: launcher.rs  progress.rs
crates/mc-launcher-core/src/command/: builder.rs
crates/mc-launcher-core/src/install/: assets.rs  client.rs  libraries.rs  loader.rs
crates/mc-launcher-core/src/io/: atomic.rs  mod.rs
crates/mc-launcher-core/src/net/: download.rs
scripts/windows/: build-msix.ps1  build-portable.ps1  cargo-gnu.ps1  setup-gtk.ps1
scripts/windows/msix/: AppxManifest.xml.template
src/: launch_service.rs  lucent-launcher.gresource.xml  main.rs  messages.rs  storage.rs
src/ui/: launcher.ui
