[package]
name = "lucent-launcher"
version = "0.1.0"
edition = "2024"


[dependencies]
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_8"] }
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_12"] }
mc-launcher-core = "0.1"
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking", "json", "rustls"] }
url = "2"
