[package]
name = "lucent-launcher"
version = "0.1.0"
edition = "2024"


[dependencies]
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_8"] }
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_12"] }
# Vendored so launcher fixes can be tested and improved with the application.
mc-launcher-core = { path = "crates/mc-launcher-core" }
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking", "json", "rustls"] }
url = "2"
sha1 = "0.10"
dirs = "6"

[build-dependencies]
glib-build-tools = "0.20"
